--- a/app/src/main/res/layout/activity_find_id.xml
+++ b/app/src/main/res/layout/activity_find_id.xml
@@ -96,7 +96,7 @@
                     android:layout_weight="2"
                     android:background="@drawable/input_background"
                     android:hint="@string/input_code"
-                    android:inputType="numberDecimal"
+                    android:inputType="textPersonName"
                     android:paddingLeft="10dp" />
 
                 <Button
@@ -190,7 +190,7 @@
                     android:layout_weight="2"
                     android:background="@drawable/input_background"
                     android:hint="@string/input_code"
-                    android:inputType="numberDecimal"
+                    android:inputType="textPersonName"
                     android:paddingLeft="10dp" />
 
                 <Button
