--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -85,14 +85,15 @@
         android:hint="********"/>
 
     <Button
+        android:id="@+id/LoginBtn"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
         android:layout_marginHorizontal="90dp"
+        android:layout_marginTop="10dp"
         android:background="@drawable/btn_color"
         android:text="@string/login"
-        android:textSize="20sp"
-        android:textColor="#ffffff"/>
+        android:textColor="#ffffff"
+        android:textSize="20sp" />
 
     <!--회원가입, 아이디/비밀번호 조회-->
     <TextView
