--- a/app/src/main/res/layout/sub_group_list.xml
+++ b/app/src/main/res/layout/sub_group_list.xml
@@ -5,6 +5,7 @@
     android:orientation="vertical"
     >
     <LinearLayout
+        android:id="@+id/linearBtn"
         android:clickable="true"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
