--- a/app/src/main/res/drawable/btn_pressed.xml
+++ b/app/src/main/res/drawable/btn_pressed.xml
@@ -8,7 +8,7 @@
         android:top="1dp">
         <shape android:shape="rectangle" >
             <corners android:radius="5dp" />
-            <solid android:color="@color/colorPrimary" />
+            <solid android:color="@color/colorPrimaryDark" />
         </shape>
     </item>
 
