--- a/app/src/main/res/layout/activity_group_menu.xml
+++ b/app/src/main/res/layout/activity_group_menu.xml
@@ -17,19 +17,19 @@
             android:id="@+id/Group_name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_margin="15dp"
             android:text="동아리 이름"
             android:textColor="#000000"
-            android:textSize="25sp"
-            android:layout_margin="20dp"/>
+            android:textSize="22sp" />
 
         <Button
-            android:layout_width="25dp"
-            android:layout_height="25dp"
-            android:background="@drawable/back"
-            android:layout_centerVertical="true"
+            android:layout_width="20dp"
+            android:layout_height="20dp"
             android:layout_alignParentRight="true"
+            android:layout_centerVertical="true"
             android:layout_marginRight="20dp"
-            android:onClick="back"/>
+            android:background="@drawable/back"
+            android:onClick="back" />
 
         <View
             android:layout_below="@id/Group_name"
