--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -16,20 +16,20 @@
         android:layout_height="120dp"
         android:src="@drawable/gachon_group_logo"/>
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="30dp"
-            android:text="@string/gachon_group"
-            android:textSize="25sp" />
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="30dp"
+        android:text="@string/gachon_group"
+        android:textSize="25sp" />
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/one_see"
-            android:textSize="30sp"
-            android:textStyle="bold"
-            android:textColor="@color/colorPrimaryDark"/>
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/one_see"
+        android:textColor="@color/colorPrimaryDark"
+        android:textSize="30sp"
+        android:textStyle="bold" />
 
     <RadioGroup
         android:id="@+id/user_categoryRG"
@@ -56,33 +56,33 @@
     <!--ID, 비밀번호 입력-->
     <EditText
         android:id="@+id/ID_et"
-        android:paddingLeft="10dp"
-        android:drawablePadding="10dp"
-        android:drawableStart="@drawable/id"
-        android:layout_marginTop="10dp"
-        android:layout_marginHorizontal="55dp"
         android:layout_width="match_parent"
         android:layout_height="45dp"
+        android:layout_marginHorizontal="55dp"
+        android:layout_marginTop="10dp"
         android:background="@drawable/input_background"
-        android:textSize="24sp"
+        android:drawableStart="@drawable/id"
+        android:drawablePadding="10dp"
         android:hint="ID"
+        android:inputType="textPersonName"
+        android:paddingLeft="10dp"
         android:textColor="#000000"
-        android:inputType="textPersonName"/>
+        android:textSize="20sp" />
 
     <EditText
         android:id="@+id/PW_et"
-        android:paddingLeft="10dp"
-        android:drawableStart="@drawable/key"
-        android:drawablePadding="10dp"
-        android:layout_marginTop="10dp"
-        android:layout_marginHorizontal="55dp"
         android:layout_width="match_parent"
         android:layout_height="45dp"
+        android:layout_marginHorizontal="55dp"
+        android:layout_marginTop="10dp"
         android:background="@drawable/input_background"
-        android:textSize="24sp"
+        android:drawableStart="@drawable/key"
+        android:drawablePadding="10dp"
+        android:hint="********"
         android:inputType="textPassword"
+        android:paddingLeft="10dp"
         android:textColor="#000000"
-        android:hint="********"/>
+        android:textSize="20sp" />
 
     <Button
         style="?android:attr/borderlessButtonStyle"
