--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -363,17 +363,18 @@
                     android:background="@drawable/btn_color"
                     android:text="@string/sign_up"
                     android:textColor="#FFFFFF"
-                    android:textSize="20sp" />
-            <Button
-                android:onClick="GoBack"
-                android:layout_marginLeft="20dp"
-                android:layout_width="match_parent"
-                android:layout_height="40dp"
-                android:layout_weight="1"
-                android:background="@drawable/btn_normal_gray"
-                android:text="@string/go_back"
-                android:textSize="20sp"
-                android:textColor="#FFFFFF"/>
+                    android:textSize="18sp" />
+
+                <Button
+                    android:layout_width="match_parent"
+                    android:layout_height="40dp"
+                    android:layout_marginLeft="20dp"
+                    android:layout_weight="1"
+                    android:background="@drawable/btn_normal_gray"
+                    android:onClick="GoBack"
+                    android:text="@string/go_back"
+                    android:textColor="#FFFFFF"
+                    android:textSize="18sp" />
 
             </LinearLayout>
     </LinearLayout>
