--- a/app/src/main/res/layout/dialog_msg.xml
+++ b/app/src/main/res/layout/dialog_msg.xml
@@ -6,27 +6,26 @@
     android:orientation="vertical">
 
     <TextView
-        android:gravity="center"
         android:id="@+id/dialog_msgTV"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginHorizontal="20dp"
+        android:layout_marginTop="20dp"
+        android:gravity="center"
         android:text="메시지"
         android:textColor="#000000"
-        android:textSize="24sp"
-        android:layout_marginTop="20dp"
-        android:layout_marginHorizontal="20dp"/>
+        android:textSize="20sp" />
 
     <Button
         android:id="@+id/okay"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
         android:layout_marginHorizontal="20dp"
+        android:layout_marginTop="20dp"
         android:layout_marginBottom="20dp"
         android:background="@drawable/btn_purple_dark"
         android:text="OK"
-        android:textSize="30sp"
         android:textColor="#FFFFFF"
-        />
+        android:textSize="25sp" />
 
 </LinearLayout>
