--- a/app/src/main/res/layout/dialog_msg_choice.xml
+++ b/app/src/main/res/layout/dialog_msg_choice.xml
@@ -6,15 +6,15 @@
     android:orientation="vertical">
 
     <TextView
-        android:gravity="center"
         android:id="@+id/dialog_msgTV"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginHorizontal="20dp"
+        android:layout_marginTop="20dp"
+        android:gravity="center"
         android:text="메시지"
         android:textColor="#000000"
-        android:textSize="24sp"
-        android:layout_marginTop="20dp"
-        android:layout_marginHorizontal="20dp"/>
+        android:textSize="20sp" />
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -25,29 +25,27 @@
             android:id="@+id/negative"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="20dp"
             android:layout_marginHorizontal="10dp"
+            android:layout_marginTop="20dp"
             android:layout_marginBottom="20dp"
+            android:layout_weight="1"
             android:background="@drawable/btn_normal_gray"
             android:text="Cancel"
-            android:textSize="30sp"
             android:textColor="#FFFFFF"
-            android:layout_weight="1"
-            />
+            android:textSize="25sp" />
 
         <Button
             android:id="@+id/positive"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="20dp"
             android:layout_marginHorizontal="10dp"
+            android:layout_marginTop="20dp"
             android:layout_marginBottom="20dp"
+            android:layout_weight="1"
             android:background="@drawable/btn_purple_dark"
             android:text="OK"
-            android:textSize="30sp"
             android:textColor="#FFFFFF"
-            android:layout_weight="1"
-            />
+            android:textSize="25sp" />
 
     </LinearLayout>
 
