--- a/app/src/main/res/layout/dialog_verify_code.xml
+++ b/app/src/main/res/layout/dialog_verify_code.xml
@@ -6,15 +6,15 @@
     android:orientation="vertical">
 
     <TextView
-        android:gravity="center"
         android:id="@+id/dialog_msgTV"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginHorizontal="20dp"
+        android:layout_marginTop="20dp"
+        android:gravity="center"
         android:text="인증번호를 입력해주세요"
         android:textColor="#000000"
-        android:textSize="24sp"
-        android:layout_marginTop="20dp"
-        android:layout_marginHorizontal="20dp"/>
+        android:textSize="20sp" />
 
     <TextView
         android:id="@+id/timeTV"
@@ -27,6 +27,7 @@
         android:textSize="20sp" />
 
     <EditText
+        android:layout_gravity="center"
         android:gravity="center"
         android:id="@+id/verify_code_ET"
         android:layout_marginTop="15dp"
@@ -39,13 +40,12 @@
         android:id="@+id/okay"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
         android:layout_marginHorizontal="20dp"
+        android:layout_marginTop="20dp"
         android:layout_marginBottom="20dp"
         android:background="@drawable/btn_purple_dark"
         android:text="OK"
-        android:textSize="30sp"
         android:textColor="#FFFFFF"
-        />
+        android:textSize="25sp" />
 
 </LinearLayout>
