--- a/app/src/main/res/layout/sub_group_list.xml
+++ b/app/src/main/res/layout/sub_group_list.xml
@@ -11,29 +11,29 @@
         android:layout_height="wrap_content"
         android:orientation="vertical"
         android:background="@drawable/btn_list"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="15dp"
         android:layout_marginHorizontal="20dp">
 
         <TextView
             android:id="@+id/group_name"
-            android:layout_marginTop="10dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            android:gravity="center"
             android:text="동아리 이름"
             android:textColor="#000000"
-            android:textSize="25sp"
-            android:textStyle="bold"
-            android:gravity="center"/>
+            android:textSize="20sp"
+            android:textStyle="bold" />
 
         <TextView
             android:id="@+id/group_description"
-            android:layout_marginTop="10dp"
-            android:layout_marginBottom="10dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginTop="5dp"
+            android:layout_marginBottom="10dp"
+            android:gravity="center"
             android:text="동아리 설명"
             android:textColor="#000000"
-            android:textSize="20sp"
-            android:gravity="center"/>
+            android:textSize="18sp" />
     </LinearLayout>
 </LinearLayout>
