홍보게시판 활성화

--- a/app/src/main/res/drawable/btn_gray_round.xml
+++ b/app/src/main/res/drawable/btn_gray_round.xml
@@ -1,15 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layer-list xmlns:android="http://schemas.android.com/apk/res/android" >
-
-    <item
-        android:bottom="1dp"
-        android:left="1dp"
-        android:right="1dp"
-        android:top="1dp">
-        <shape android:shape="rectangle" >
-            <corners android:radius="20dp" />
-            <solid android:color="#E6E6E6" />
-        </shape>
-    </item>
-
-</layer-list>
+<selector xmlns:android="http://schemas.android.com/apk/res/android">
+    <item android:drawable="@drawable/btn_gray_round_pressed"
+        android:state_pressed="true" />
+    <item android:drawable="@drawable/btn_gray_round_pressed"
+        android:state_focused="true" />
+    <item android:drawable="@drawable/btn_gray_round_normal" />
+</selector>
