--- a/app/src/main/res/layout/activity_prsearch.xml
+++ b/app/src/main/res/layout/activity_prsearch.xml
@@ -37,15 +37,31 @@
             android:background="#000000" />
     </RelativeLayout>
 
-    <EditText
-        android:textSize="20sp"
-        android:padding="5dp"
-        android:hint="검색어를 입력해주세요"
-        android:layout_marginTop="20dp"
+    <FrameLayout
         android:layout_width="match_parent"
-        android:layout_height="45dp"
-        android:layout_marginHorizontal="30dp"
-        android:background="@drawable/input_background"
-        android:drawableRight="@drawable/search"/>
+        android:layout_height="wrap_content">
+        <EditText
+            android:id="@+id/searchET"
+            android:layout_width="match_parent"
+            android:layout_height="45dp"
+            android:layout_marginHorizontal="30dp"
+            android:layout_marginTop="20dp"
+            android:background="@drawable/input_background"
+            android:hint="검색어를 입력해주세요"
+            android:padding="5dp"
+            android:textSize="20sp" />
+
+        <Button
+            android:layout_gravity="right"
+            android:layout_marginTop="25dp"
+            android:layout_marginRight="35dp"
+            android:id="@+id/searchBtn"
+            android:layout_width="35dp"
+            android:layout_height="35dp"
+            android:background="@drawable/search"/>
+    </FrameLayout>
+
+
+
 
 </LinearLayout>
