--- a/app/src/main/res/layout/dialog_msg.xml
+++ b/app/src/main/res/layout/dialog_msg.xml
@@ -2,30 +2,38 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="@drawable/dialog_background"
     android:orientation="vertical">
 
-    <TextView
-        android:id="@+id/dialog_msgTV"
+    <LinearLayout
+        android:layout_marginHorizontal="20dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginHorizontal="20dp"
-        android:layout_marginTop="20dp"
-        android:gravity="center"
-        android:text="메시지"
-        android:textColor="#000000"
-        android:textSize="20sp" />
+        android:orientation="vertical"
+        android:background="@drawable/dialog_background">
 
-    <Button
-        android:id="@+id/okay"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginHorizontal="20dp"
-        android:layout_marginTop="20dp"
-        android:layout_marginBottom="20dp"
-        android:background="@drawable/btn_purple_dark"
-        android:text="OK"
-        android:textColor="#FFFFFF"
-        android:textSize="25sp" />
+        <TextView
+            android:id="@+id/dialog_msgTV"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginHorizontal="20dp"
+            android:layout_marginTop="20dp"
+            android:gravity="center"
+            android:text="메시지"
+            android:textColor="#000000"
+            android:textSize="20sp" />
+
+        <Button
+            android:id="@+id/okay"
+            android:layout_width="match_parent"
+            android:layout_height="40dp"
+            android:layout_marginHorizontal="20dp"
+            android:layout_marginTop="10dp"
+            android:layout_marginBottom="20dp"
+            android:background="@drawable/btn_purple_dark"
+            android:text="OK"
+            android:textColor="#FFFFFF"
+            android:textSize="25sp" />
+    </LinearLayout>
+
 
 </LinearLayout>
