--- a/app/src/main/res/layout/activity_my_information.xml
+++ b/app/src/main/res/layout/activity_my_information.xml
@@ -139,15 +139,16 @@
                 android:textSize="20sp" />
 
             <Button
+                android:id="@+id/requirementsBtn"
                 style="?android:attr/borderlessButtonStyle"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="10dp"
                 android:background="@drawable/list_background"
                 android:gravity="left|center_vertical"
-                android:paddingLeft="20dp"
                 android:paddingVertical="15dp"
-                android:text="@string/faq"
+                android:paddingLeft="20dp"
+                android:text="@string/requirement"
                 android:textSize="20sp" />
 
             <Button
