--- a/app/src/main/res/layout/dialog_msg_choice.xml
+++ b/app/src/main/res/layout/dialog_msg_choice.xml
@@ -2,52 +2,54 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="@drawable/dialog_background"
     android:orientation="vertical">
 
-    <TextView
-        android:id="@+id/dialog_msgTV"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginHorizontal="20dp"
-        android:layout_marginTop="20dp"
-        android:gravity="center"
-        android:text="메시지"
-        android:textColor="#000000"
-        android:textSize="20sp" />
-
     <LinearLayout
+        android:background="@drawable/dialog_background"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal">
+        android:orientation="vertical"
+        android:layout_marginHorizontal="20dp">
 
-        <Button
-            android:id="@+id/negative"
+        <TextView
+            android:id="@+id/dialog_msgTV"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginHorizontal="10dp"
+            android:layout_marginHorizontal="20dp"
             android:layout_marginTop="20dp"
-            android:layout_marginBottom="20dp"
-            android:layout_weight="1"
-            android:background="@drawable/btn_normal_gray"
-            android:text="Cancel"
-            android:textColor="#FFFFFF"
-            android:textSize="25sp" />
+            android:gravity="center"
+            android:text="메시지"
+            android:textColor="#000000"
+            android:textSize="20sp" />
 
-        <Button
-            android:id="@+id/positive"
+        <LinearLayout
+            android:layout_margin="10dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginHorizontal="10dp"
-            android:layout_marginTop="20dp"
-            android:layout_marginBottom="20dp"
-            android:layout_weight="1"
-            android:background="@drawable/btn_purple_dark"
-            android:text="OK"
-            android:textColor="#FFFFFF"
-            android:textSize="25sp" />
+            android:orientation="horizontal">
 
+            <Button
+                android:id="@+id/negative"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginHorizontal="10dp"
+                android:layout_weight="1"
+                android:background="@drawable/btn_normal_gray"
+                android:text="Cancel"
+                android:textColor="#FFFFFF"
+                android:textSize="25sp" />
+
+            <Button
+                android:id="@+id/positive"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginHorizontal="10dp"
+                android:layout_weight="1"
+                android:background="@drawable/btn_purple_dark"
+                android:text="OK"
+                android:textColor="#FFFFFF"
+                android:textSize="25sp" />
+
+        </LinearLayout>
     </LinearLayout>
-
-
 </LinearLayout>
